# CosmoML

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
cosmoml/: __init__.py  config.py  priors.py  sampling.py
cosmoml/data/: __init__.py  des.py  desi_bao.py  pantheon.py
cosmoml/ml/: __init__.py  contour.py  curve.py  marginal.py  shap_utils.py  train.py
cosmoml/theory/: __init__.py  bao.py  jax_theory.py  joint.py  sne.py
notebooks/: 02_SN_DES.ipynb  04_SN+BAO.ipynb  05_Figures.ipynb  06_Paper.ipynb  07_ML_vs_Theory.ipynb  run_cosmo.py
outputs/datasets/: 1_1_dataset.csv  1_2_dataset.csv  1_3_dataset.csv  1_4_dataset.csv  1_5_dataset.csv  1_6_dataset.csv  2_1_dataset.csv  2_2_dataset.csv  2_3_dataset.csv  2_4_dataset.csv  3_1_dataset.csv  3_2_dataset.csv  3_5_dataset.csv  3_6_dataset.csv  4_2_dataset.csv  4_3_dataset.csv  4_4_dataset.csv  5_2_dataset_DES.csv  5_2_dataset_NoSHOES.csv  5_2_dataset_Pantheon.csv
outputs/models/: 1_1_model.info.pkl  1_2_model.info.pkl  1_3_model.info.pkl  1_4_model.info.pkl  1_5_model.info.pkl  1_6_model.info.pkl  2_3_model.info.pkl  2_4_model.info.pkl  3_1_model.info.pkl  3_2_model.info.pkl  3_5_model.info.pkl  3_6_model.info.pkl  3_7_model.info.pkl  4_1_model.info.pkl  4_2_bao_model.info.pkl  4_2_sne_model.info.pkl  5_2_model_DES.info.pkl  5_2_model_DES.ubj  5_2_model_NoSHOES.info.pkl  5_2_model_NoSHOES.ubj  5_2_model_Pantheon.info.pkl  5_2_model_Pantheon.ubj
