[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmoml"
version = "0.1.0"
description = "Análisis ML (XGBoost + SHAP) sobre likelihoods cosmológicos: SNe Ia (Pantheon+/DES) y BAO (DESI)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "astropy>=5.3",
    "matplotlib>=3.7",
    "xgboost>=1.7",
    "shap>=0.44",
    "scikit-learn>=1.3",
]

[tool.setuptools]
packages = ["cosmoml", "cosmoml.data", "cosmoml.theory", "cosmoml.ml"]
